.opam/default/.opam-switch/sources/sail_ocaml_backend.0.20.1/test/typecheck/fail/test_not_unit_3.sail
default Order dec

$[test]
val test_bad : unit -> int

function test_bad() = 5

function main() -> unit = ()
